Prototype frog eye

--- a/Physics/LightAndOpticalSystems/light-and-optical-systems.ipynb
+++ b/Physics/LightAndOpticalSystems/light-and-optical-systems.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,25 +215,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/5v7bN13PjZ8?rel=0\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>"
+       "<iframe width=\"672\" height=\"378\" src=\"https://www.youtube.com/embed/5v7bN13PjZ8?rel=0\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/5v7bN13PjZ8?rel=0\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>')"
+    "HTML('<iframe width=\"672\" height=\"378\" src=\"https://www.youtube.com/embed/5v7bN13PjZ8?rel=0\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>')"
    ]
   },
   {
@@ -252,13 +252,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04dd6a2f589d4fd6b0ad7e3569f36da3",
+       "model_id": "ac0b820774b445a581b0402ebec3440a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "' Exploring eyes of other animals.'"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,6 +545,51 @@
    "metadata": {},
    "source": [
     "<img src='images/callysto-bottom-banner.jpg'>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "671c83210dcc463ebbba671d36e04ee2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(position=(-150.0, 0.0, 120.0), quaternion=(0.0, 0.0, 0.0, 1.0), scale=(1.0, …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "frogmesh = trimesh.load('frogeye.stl')\n",
+    "\n",
+    "frogmeshes = frogmesh.split()\n",
+    "\n",
+    "# TODO: Color in parts of frog eye.\n",
+    "\n",
+    "frog = [makeMesh(f) for f in frogmeshes]\n",
+    "\n",
+    "# Set up the scene.\n",
+    "key_light = DirectionalLight(position=[-60, 120, 30])\n",
+    "camera = PerspectiveCamera(position=[-150, 0, 120], up=[0, 1, 0], )\n",
+    "controller = OrbitControls(controlling=camera)\n",
+    "\n",
+    "scene = Scene(children=[frog[0], camera, key_light, AmbientLight(color='#ffffff', intensity=0.25)], background=None)\n",
+    "\n",
+    "# The renderer is what contains all members of the scene. Displaying this displays the scene.\n",
+    "renderer = Renderer(camera=camera, width = 540, height = 540,\n",
+    "                        scene=scene, controls=[controller],\n",
+    "                        alpha=True, clearOpacity=0)\n",
+    "\n",
+    "scene.children += tuple([frog[i] for i in range(1,len(frog))])\n",
+    "display(renderer)"
    ]
   },
   {
