--- a/Technology/issues-related-to-thermal-technologies.ipynb
+++ b/Technology/issues-related-to-thermal-technologies.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -94,12 +94,12 @@
    "source": [
     "## Types of Thermal Energy\n",
     "\n",
-    "Click on the \"Next\" button to browse through the different types of thermal energy sources."
+    "Use the arrows on the edge of the images to browse through the different types of thermal energy sources."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {
     "scrolled": false
    },
@@ -107,7 +107,7 @@
     {
      "data": {
       "text/html": [
-       "<center><iframe src = \"index.html\" width = \"750px\" height = \"600px\" frameBorder=\"0\"></iframe></center>"
+       "<iframe src = \"slides.html\" width = \"950px\" height = \"650px\" frameBorder=\"0\">"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -119,7 +119,7 @@
    ],
    "source": [
     "%%html\n",
-    "<center><iframe src = \"index.html\" width = \"750px\" height = \"600px\" frameBorder=\"0\"></iframe></center>"
+    "<iframe src = \"slides.html\" width = \"950px\" height = \"650px\" frameBorder=\"0\">"
    ]
   },
   {
@@ -127,8 +127,23 @@
    "metadata": {},
    "source": [
     "## Positive & Negative Impacts of Energy Use\n",
-    "\n"
+    "\n",
+    "It is important to understand the effects of energy use in modern society as it has far reaching implications on so much of the world. These topics can be talked about both in a positive or negative light, depending on ones personal outlook or by means of facts. Below are several of the talking points used when discussing the impacts of energy use and especially that of thermal energies, as they are the most relevant. Can you identify which of these items would be considered as positive impacts and those that are negative ? \n",
+    "\n",
+    "Click on each subject and choose which ones are positive by making them green and making the negative ones red!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -140,7 +155,7 @@
     "nuclear - http://www.hcs.harvard.edu/~res/2015/05/spring-15-feature-issue-future-of-nuclear-energy/\n",
     "biofuel - https://ec.europa.eu/jrc/en/news/technology-key-ensuring-sustainable-bioenergy-and-biofuel-production\n",
     "geothermal - https://difweb.org/geothermal-energy-is-getting-hot/\n",
-    "solar - https://www.extremetech.com/extreme/188328-californias-new-solar-power-plant-is-actually-a-death-ray-thats-incinerating-birds-mid-flight\n",
+    "solar - https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwj-wOONo8rdAhXWJDQIHeuiBDEQjRx6BAgBEAU&url=http%3A%2F%2Fcusustainableenergy.pbworks.com%2Fw%2Fpage%2F7390344%2FSolar%2520Collectors&psig=AOvVaw0wssvoJJXMDkoZDQq9b0eA&ust=1537556649007086\n",
     "\n",
     "Coal - http://www.energytrendsinsider.com/research/coal/coal-mining-and-processing/\n",
     "oil - https://www.cannonoperating.com/educational/5-things-know-investing-oil-well/\n",
