Fix Geogebra installation in CC65. Fix file location in CC66.

--- a/CentralTendencyAndOutliers/CC-66-Effect_Of_Ouliers_On_Central_Tendency.ipynb
+++ b/CentralTendencyAndOutliers/CC-66-Effect_Of_Ouliers_On_Central_Tendency.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -214,20 +214,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sodium content read from the file:  [871, 1250, 6458, 270, 250, 205, 340, 843, 482, 521, 450, 360, 780, 340, 510, 460, 380, 290, 458, 335, 355, 590, 600, 595, 547, 1036, 410, 190, 530]\n"
+      "Sodium content read from the file:  [871, 1250, 270, 250, 205, 340, 843, 482, 521, 450, 360, 780, 340, 510, 460, 380, 290, 458, 335, 355, 590, 600, 595, 547, 1036, 410, 190, 530]\n"
      ]
     }
    ],
    "source": [
     "data = []\n",
-    "with open('exampleData.csv', 'r') as f:\n",
+    "with open('CC66_materials/exampleData.csv', 'r') as f:\n",
     "    reader = csv.reader(f)\n",
     "    for row in reader:\n",
     "        data.append(int(row[1]))\n",
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,15 +289,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean:  714.0\n",
-      "Median:  460.0\n",
+      "Mean:  508.857\n",
+      "Median:  459.0\n",
       "Mode: 340 (appeared 2 times.)\n"
      ]
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,13 +383,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01df87900b7144c0881eb5f96c49dee3",
+       "model_id": "9e0fdb5991214a6eb85e1d9246e91c6a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea116de500114466b06a09a50dab23d1",
+       "model_id": "320c797cdc064c2d920f951ba9a49cdd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -512,16 +512,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number(s) of Outlier : 1\n",
-      "Outlier 1: 2345\n",
-      "Dataset with outlier (last 1 entry was added) :  [190, 205, 250, 270, 290, 335, 340, 340, 355, 360, 380, 410, 450, 458, 460, 482, 510, 521, 530, 547, 590, 595, 600, 780, 843, 871, 1036, 1250, 2345]\n"
+      "Number(s) of Outlier : 2\n",
+      "Outlier 1: 5555\n",
+      "Outlier 2: -123\n",
+      "Dataset with outliers (last 2 entries were added) :  [190, 205, 250, 270, 290, 335, 340, 340, 355, 360, 380, 410, 450, 458, 460, 482, 510, 521, 530, 547, 590, 595, 600, 780, 843, 871, 1036, 1250, 5555, -123]\n"
      ]
     }
    ],
@@ -550,15 +551,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean:  572.172\n",
-      "Median:  460.0\n",
+      "Mean:  656.0\n",
+      "Median:  459.0\n",
       "Mode: 340 (appeared 2 times.)\n"
      ]
     }
@@ -578,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -586,7 +587,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "efa491d3be704456b867cb93bafb0036",
+       "model_id": "870dcdb2988f4b2e97c9f3e2fff34354",
        "version_major": 2,
        "version_minor": 0
       },
@@ -640,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -649,8 +650,8 @@
      "text": [
       "Central Tendency  Before adding outlier  After adding outlier \n",
       "----------------- ---------------------- ---------------------\n",
-      "             Mean                508.857               572.172\n",
-      "           Median                  459.0                 460.0\n",
+      "             Mean                508.857                 656.0\n",
+      "           Median                  459.0                 459.0\n",
       "             Mode                  340.0                 340.0\n"
      ]
     }
@@ -679,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -687,7 +688,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b1d01547e6546b9ae955e2422c99e02",
+       "model_id": "dfd6ba52b72747778918faaa5bd5693a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -754,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +780,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3643b5bb0fb54393a5e344ece9b84fbc",
+       "model_id": "adeb4abc6ddc4947b2fa76e3995b5f6b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -831,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +926,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "312bb35218c6465e8ce4a4c498ad0db0",
+       "model_id": "1db56b5cae2c47af9b368f1489ba81f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -977,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1091,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "116f75e26d564baf984db76c1fbc0e3d",
+       "model_id": "bd2ef3fcfd0d4316b31fffc48d1e1e33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1142,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1278,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "496c6721d9c64a2c884999b5389af5c7",
+       "model_id": "0dabe08ef9e7461c8913c105d2aebffd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1330,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1423,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1437,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eaeba6d66d874c7cbfdc057003a3403c",
+       "model_id": "58f157f944914ff2a14fc89f923d7cf0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1488,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1594,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1607,7 +1608,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16edfea563e04b85ae6c9fbcac0ea75e",
+       "model_id": "b7a6f44a37194a9c81784756f740dbec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1660,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1751,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1765,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3adb18df4e1e4ec3b13e2c2da4817096",
+       "model_id": "e852c85c363f4218b100ae5999be4ef7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1816,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
