--- a/CentralTendencyAndOutliers/CC65-Central_Tendency.ipynb
+++ b/CentralTendencyAndOutliers/CC65-Central_Tendency.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting geogebra from git+git://github.com/callysto/nbplus.git#egg=geogebra&subdirectory=geogebra\n",
+      "  Cloning git://github.com/callysto/nbplus.git to /tmp/pip-install-xp6o5m6h/geogebra\n",
+      "Building wheels for collected packages: geogebra\n",
+      "  Running setup.py bdist_wheel for geogebra ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /tmp/pip-ephem-wheel-cache-n094huu5/wheels/cd/8f/54/42a9349ed6e488bb120c4c182ad6aa4f19e86061fe875bf3c5\n",
+      "Successfully built geogebra\n",
+      "Installing collected packages: geogebra\n",
+      "  Found existing installation: geogebra 0.0.0\n",
+      "    Uninstalling geogebra-0.0.0:\n",
+      "      Successfully uninstalled geogebra-0.0.0\n",
+      "Successfully installed geogebra-0.0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install --upgrade --force-reinstall --user git+git://github.com/callysto/nbplus.git#egg=geogebra\\&subdirectory=geogebra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "scrolled": false
    },
@@ -259,7 +286,7 @@
     }
    ],
    "source": [
-    "from ggb import *\n",
+    "from geogebra.ggb import *\n",
     "ggb = GGB()\n",
     "ggb.file('CC65_materials/centralTendency.ggb').draw()"
    ]
@@ -287,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -365,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -405,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -494,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +545,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ea28b4dda7f44758f2924c79381526e",
+       "model_id": "bcdd1b51b03c4b2395adc04ccaf67503",
        "version_major": 2,
        "version_minor": 0
       },
@@ -571,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +691,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a671803d32c54a7f8d9f4ccda475a479",
+       "model_id": "488a5f1386c74ed6aacfb118efacf70b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -715,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +841,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "714eb7eb4fe9480ebec9ba49c05fe24f",
+       "model_id": "8c85f01ac2a04ec29713dfcf2f7d3919",
        "version_major": 2,
        "version_minor": 0
       },
@@ -865,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +1003,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "271bdf4088834079b7b3173ffcb0e336",
+       "model_id": "86670f247c7c45ca91101e0e922a4d1f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1029,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1164,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fce07dbc3274ec59c6fef4838c1f4d1",
+       "model_id": "32f9042a4ed342b68bace610bd0639eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1188,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1338,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df8dee8d8ec947f9b0251965598bd26a",
+       "model_id": "a5b300c46c8344fa9a15fd5c1fb8d63f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1362,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1453,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1493,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a81a54e026494201bdaa2aaeefd217fe",
+       "model_id": "ddbb4ab194504a1990151fe400e804a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1518,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1643,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5231b2efee454870b2e20150c8e3a78f",
+       "model_id": "83dd286c9bc34883a50b1cc6c78c80b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1667,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
