--- a/Mathematics/Divide And Conquer/Divide and Conquer.ipynb
+++ b/Mathematics/Divide And Conquer/Divide and Conquer.ipynb
@@ -145,21 +145,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"560\" height=\"315\" style=\"float:centre\" src=\"https://www.youtube.com/embed/wVPCT1VjySA\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen ></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hide_me\n",
+    "\n",
+    "HTML('<iframe width=\"560\" height=\"315\" style=\"float:centre\" src=\"https://www.youtube.com/embed/wVPCT1VjySA\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen ></iframe>')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Visualizing the Algortihm with Santa's Dirty Socks problem\n",
+    "\n",
+    "### If we break down this problem solving process into steps, we will get a fair idea about algorithms.\n",
+    "\n",
+    "Now lets breakdown the video and algorithm into steps.\n",
+    "\n",
+    "The solution in the story points out that when there are 1024 boxes to test, instead of having to open all of them until the socks are found, one half can be eliminated at a time, and repeatedly halving the problem very quickly narrows it down to one box (the size of the problem starts at 1024, then with one weighing there are 512 boxes, then 256, 128, 64, 32, 16, 8, 4, 2 and 1.)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Knowledge Areas\n",
     "\n",
     "* the engineering design process,\n",
-    "* scientific consensus,\n",
     "* the scientific method,\n",
-    "* systems thinking,\n",
     "* user-centered design\n",
     "\n",
     "\n",
     "## Big Ideas\n",
     "* This technique yields elegant, simple and quite often very efficient algorithms.\n",
-    "* It is used in several renowned algorithms.\n",
     "* Divide a bigger problem into smaller problems, solve them individually and merge the solutions.\n",
     "\n",
     "## Specific Expectations:\n",
@@ -278,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -376,34 +412,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<!DOCTYPE html>\n",
-       "<html>\n",
-       "\n",
-       "<img src=\"divide-and-conquer_1.png\" alt=\"drawing\" width=\"500\" height=\"333\" style=\"float:middle\">\n",
-       "</html>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "%%html\n",
-    "<!DOCTYPE html>\n",
-    "<html>\n",
-    "\n",
-    "<img src=\"divide-and-conquer_1.png\" alt=\"drawing\" width=\"500\" height=\"333\" style=\"float:middle\">\n",
-    "</html>\n"
+    "![](divide-and-conquer_1.png)\n",
+    "\n"
    ]
   },
   {
@@ -452,50 +465,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "## Visualizing the Algortihm with Santa's Dirty Socks problem"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe width=\"560\" height=\"315\" style=\"float:centre\" src=\"https://www.youtube.com/embed/wVPCT1VjySA\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen ></iframe>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hide_me\n",
-    "\n",
-    "HTML('<iframe width=\"560\" height=\"315\" style=\"float:centre\" src=\"https://www.youtube.com/embed/wVPCT1VjySA\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen ></iframe>')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### The video story breakdown\n",
-    "\n",
-    "Now lets breakdown the video and algorithm into steps.\n",
-    "\n",
-    "The solution in the story points out that when there are 1024 boxes to test, instead of having to open all of them until the socks are found, one half can be eliminated at a time, and repeatedly halving the problem very quickly narrows it down to one box (the size of the problem starts at 1024, then with one weighing there are 512 boxes, then 256, 128, 64, 32, 16, 8, 4, 2 and 1.)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Follow up discussion\n",
     "\n",
     "* Consider devloping a divide and conquer strategy with a balance scale and, say, 32 weights that are identical except one. \n",
@@ -526,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,9 +522,11 @@
     "    \n",
     "    return number, rounds\n",
     "\n",
-    "def Guess_Number(number,rounds):\n",
+    "def Guess_Number(guess,number,rounds):\n",
     "    \n",
-    "    for _ in range(rounds):       \n",
+    "    print(guess , number, rounds)\n",
+    "    if(rounds > 0):\n",
+    "        #rounds = rounds + 1\n",
     "        try:\n",
     "            integer = int(guess)\n",
     "            if integer == number:\n",
@@ -565,95 +536,26 @@
     "                print('Try Higher')\n",
     "            elif integer > number:\n",
     "                print('Try Lower')\n",
-    "\n",
     "        except ValueError:\n",
-    "            print(\"You must enter a valid integer.\")\n",
-    "\n",
-    "    print(\"You didn't guess correctly in {rounds} rounds. You lost.\".format(rounds=rounds))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Guess a number between 1 and 100. You have 7 rounds to try and guess correctly.\n",
-      "3\n",
-      "7\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82a769348f4645d3a95cad161a3fff68",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>BoundedIntText</code>.</p>\n",
-       "<p>\n",
-       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
-       "  that the widgets JavaScript is still loading. If this message persists, it\n",
-       "  likely means that the widgets JavaScript library is either not installed or\n",
-       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
-       "  Widgets Documentation</a> for setup instructions.\n",
-       "</p>\n",
-       "<p>\n",
-       "  If you're reading this message in another frontend (for example, a static\n",
-       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
-       "  it may mean that your frontend doesn't currently support widgets.\n",
-       "</p>\n"
-      ],
-      "text/plain": [
-       "BoundedIntText(value=0, description='Enter value:')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from IPython.display import clear_output\n",
-    "\n",
-    "Algorithm_value = widgets.BoundedIntText(\n",
-    "    value = 0,\n",
-    "    min = 0,\n",
-    "    max = 100,\n",
-    "    step = 1,\n",
-    "    description = 'Enter Number:',\n",
-    "    disabled = False\n",
-    ")\n",
-    "\n",
-    "Number, rounds = number_guessing_game(1, 100, 7)\n",
-    "\n",
-    "def on_value_change(change):\n",
+    "            print(\"You must enter a valid integer.\")       \n",
+    "    else:\n",
+    "        print(\"You didn't guess correctly in {rounds} rounds. You lost.\".format(rounds=rounds))\n",
+    "         \n",
     "    \n",
-    "    clear_output(wait= False)\n",
-    "    display(Algorithm_value)\n",
-    "    #Plot_values = []\n",
-    "    #Calculate_Value(change['new'])\n",
-    "    #Plot_values = Calculate_Value(change['new'])\n",
-    "    #plot_stored_values(Plot_values, change['new'])\n",
-    "    \n",
-    "\n",
-    "display(Algorithm_value)\n",
-    "Algorithm_value.observe(on_value_change, names='value')    \n",
-    "#number_guessing_game(1, 100, 7)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a2583fd0507443fb69d37798e8f81e0",
+       "model_id": "088b8003982e4504859f4e26ad3393f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -682,7 +584,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1dbc33fba710451b8856ccca36d64936",
+       "model_id": "f4dd600438154157ae48d66b0e326f4c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -711,7 +613,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c918d122b4da401188d58b56358b03d2",
+       "model_id": "a70fe073a59443199ab4f0dba3009ad4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -739,6 +641,28 @@
     }
    ],
    "source": [
+    "from IPython.display import clear_output\n",
+    "\n",
+    "Algorithm_value = widgets.BoundedIntText(\n",
+    "    value = 0,\n",
+    "    min = 1,\n",
+    "    max = 100,\n",
+    "    step = 1,\n",
+    "    description = 'Enter Number:',\n",
+    "    disabled = False\n",
+    ")\n",
+    "\n",
+    "#Number, rounds = number_guessing_game(1, 100, 7)\n",
+    "Guess_number = 0\n",
+    "def on_value_change(change):\n",
+    "    \n",
+    "    clear_output(wait= False)\n",
+    "    display(Algorithm_value)\n",
+    "    number_values = Guess_Number(change['new'], Number, rounds - 1)\n",
+    "    #plot_stored_values(Plot_values, change['new'])\n",
+    "    \n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "Start_button = widgets.Button(description = \"Start\")\n",
@@ -750,15 +674,31 @@
     "Stop_button = widgets.Button(description = \"Stop\")\n",
     "display(Stop_button)\n",
     "\n",
-    "def on_button_clicked_1(b):\n",
-    "    number_guessing_game(1, 100, 7)\n",
-    "    print(\"Button clicked.\")\n",
+    "def on_button_clicked_start(b):\n",
+    "    Number, rounds = number_guessing_game(1, 100, 7)\n",
+    "    print(Number, rounds)\n",
+    "    temp_round_value = rounds\n",
+    "    print(\"start Button clicked.\")\n",
+    "    display(Algorithm_value)\n",
+    "    Algorithm_value.observe(on_value_change, names='value')    \n",
     "\n",
-    "def on_button_clicked_2(b):\n",
+    "def on_button_clicked_restart(b):\n",
     "    number_guessing_game(1, 100, 7)\n",
-    "    print(\"Button clicked.\")    \n",
-    "Start_button.on_click(on_button_clicked_1)\n",
-    "#Restart_button.on_click(on_button_clicked_2)\n"
+    "    print(\"restart Button clicked.\")   \n",
+    "    \n",
+    "Start_button.on_click(on_button_clicked_start)   \n",
+    "Restart_button.on_click(on_button_clicked_restart)\n",
+    "#Restart_button.on_click(on_button_clicked_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n"
    ]
   },
   {
@@ -779,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +731,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -813,11 +753,12 @@
        "<!DOCTYPE html>\n",
        "<html>\n",
        "    <head>\n",
+       "       \n",
        "        <script src=\"http://d3js.org/d3.v3.min.js\"></script>\n",
        "    </head>\n",
        "    <body>\n",
        "        \n",
-       "        <script src=\"gold_bar_animation.js\"></script>\n",
+       "        <script src=\"/tree/curriculum-notebooks/Mathematics/Divide And Conquer/gold_bar_animation.js\"></script>\n",
        "    </body>\n",
        "</html>\n"
       ],
@@ -834,15 +775,23 @@
     "<!DOCTYPE html>\n",
     "<html>\n",
     "    <head>\n",
+    "       \n",
     "        <script src=\"http://d3js.org/d3.v3.min.js\"></script>\n",
     "    </head>\n",
     "    <body>\n",
     "        \n",
-    "        <script src=\"gold_bar_animation.js\"></script>\n",
+    "        <script src=\"/tree/curriculum-notebooks/Mathematics/Divide And Conquer/gold_bar_animation.js\"></script>\n",
     "    </body>\n",
     "</html>\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
