--- a/Mathematics/CC143_Counting_Triangles/CC-143_Puzzle_Triangles_in_a_pentagon.ipynb
+++ b/Mathematics/CC143_Counting_Triangles/CC-143_Puzzle_Triangles_in_a_pentagon.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
     "from IPython.display import Image\n",
     "import pandas\n",
     "\n",
-    "from ggb import *\n"
+    "from geogebra import *\n"
    ]
   },
   {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting geogebra from git+git://github.com/callysto/nbplus.git#egg=geogebra&subdirectory=geogebra\n",
+      "  Cloning git://github.com/callysto/nbplus.git to /tmp/pip-install-t2hd8vbz/geogebra\n",
+      "Building wheels for collected packages: geogebra\n",
+      "  Running setup.py bdist_wheel for geogebra ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /tmp/pip-ephem-wheel-cache-4heqbs9f/wheels/cd/8f/54/42a9349ed6e488bb120c4c182ad6aa4f19e86061fe875bf3c5\n",
+      "Successfully built geogebra\n",
+      "Installing collected packages: geogebra\n",
+      "  Found existing installation: geogebra 0.0.0\n",
+      "    Uninstalling geogebra-0.0.0:\n",
+      "      Successfully uninstalled geogebra-0.0.0\n",
+      "Successfully installed geogebra-0.0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install --upgrade --force-reinstall --user git+git://github.com/callysto/nbplus.git#egg=geogebra\\&subdirectory=geogebra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +437,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "335c4ffea91e4abcafe828afdf9df511",
+       "model_id": "68b41c0a8fe0455dbb76652ad1ab9f8e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -469,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +509,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa505099e1be4683aa4aaa0d5829f23f",
+       "model_id": "27a83df64be04c5e90c578363e4893a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -541,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +581,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d43be9af6adb4b189ba6a04229b8caab",
+       "model_id": "9550769ecd0c4223968e104995528534",
        "version_major": 2,
        "version_minor": 0
       },
@@ -613,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +653,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69db43b57897488fb8c2815dc8e99f02",
+       "model_id": "18434167e6db4421bee9af03727c460b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -685,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +725,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d83b2ee769f4115a528234eb7b0efca",
+       "model_id": "749fd25d8c3741b5871092b1f041bf27",
        "version_major": 2,
        "version_minor": 0
       },
